--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -23,6 +23,7 @@ runtimeLivedata = "1.7.7"
 androidx-navigation-compose = "2.8.7"
 auth0-jwt = "4.2.0"
 composeMaterial = "1.4.1"
+compose-foundation = "1.7.8"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -48,6 +49,7 @@ androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtim
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 auth0-jwt = { group = "com.auth0", name = "java-jwt", version.ref = "auth0-jwt" }
 androidx-compose-material = { group = "androidx.wear.compose", name = "compose-material", version.ref = "composeMaterial" }
+compose-foundation = { module = "androidx.compose.foundation:foundation", version.ref = "compose-foundation" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
