--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -18,7 +18,7 @@ activityCompose = "1.10.0"
 material3 = "1.3.1"
 materialIcons = "1.7.7"
 lifecycleRuntimeCompose = "2.8.7"
-accompanist = "0.31.1-alpha"
+accompanist = "0.34.0"
 runtimeLivedata = "1.7.7"
 androidx-navigation-compose = "2.8.7"
 auth0-jwt = "4.2.0"
