--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -13,12 +13,11 @@ retrofit = "2.9.0"
 gson = "2.10.1"
 lifecycle-ktx = "2.8.7"
 compose = "1.7.7"
-composeCompiler = "1.5.14"
+composeCompiler = "1.5.14" #do not remove this no matter what the IDE tells you, it might appear that this is not used but its a lie
 activityCompose = "1.10.0"
 material3 = "1.3.1"
 materialIcons = "1.7.7"
 lifecycleRuntimeCompose = "2.8.7"
-accompanist = "0.34.0"
 runtimeLivedata = "1.7.7"
 androidx-navigation-compose = "2.8.7"
 auth0-jwt = "4.2.0"
@@ -45,7 +44,6 @@ compose-material3 = { module = "androidx.compose.material3:material3", version.r
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
-accompanist-systemuicontroller = { module = "com.google.accompanist:accompanist-systemuicontroller", version.ref = "accompanist" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
 navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
 auth0-jwt = { group = "com.auth0", name = "java-jwt", version.ref = "auth0-jwt" }
