--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,9 @@
 [versions]
 agp = "8.12.0"
-kotlin = "1.9.24"
+kotlin = "2.1.10"
 coreKtx = "1.16.0"
 room = "2.7.2"
-ksp = "1.9.0-1.0.13"
+ksp = "2.1.10-1.0.29"
 auth0-jwt = "4.5.0"
 bcrypt = "0.10.2"
 junit = "4.13.2"
@@ -17,7 +17,7 @@ retrofit = "2.9.0"
 gson = "2.11.0"
 lifecycle-ktx = "2.8.7"
 compose = "1.7.7"
-composeCompiler = "1.5.14" #do not remove this no matter what the IDE tells you, it might appear that this is not used but its a lie
+composeCompiler = "2.1.10" #do not remove this no matter what the IDE tells you, it might appear that this is not used but its a lie
 activityCompose = "1.10.0"
 material3 = "1.3.1"
 materialIcons = "1.7.7"
@@ -61,3 +61,4 @@ compose-foundation = { module = "androidx.compose.foundation:foundation", versio
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
+kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
