--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -16,16 +16,17 @@ constraintlayout = "2.2.0"
 retrofit = "2.9.0"
 gson = "2.11.0"
 lifecycle-ktx = "2.8.7"
-compose = "1.7.7"
+compose = "1.10.1"
+material3WindowSize = "1.4.0"
 composeCompiler = "2.1.10" #do not remove this no matter what the IDE tells you, it might appear that this is not used but its a lie
 activityCompose = "1.10.0"
-material3 = "1.3.1"
+material3 = "1.4.0"
 materialIcons = "1.7.7"
 lifecycleRuntimeCompose = "2.8.7"
 runtimeLivedata = "1.7.7"
 androidx-navigation-compose = "2.8.7"
-composeMaterial = "1.4.1"
-compose-foundation = "1.7.8"
+composeMaterial = "1.5.6"
+compose-foundation = "1.10.1"
 work-manager = "2.11.0"
 
 [libraries]
@@ -51,6 +52,7 @@ compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose" }
 compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose" }
 compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "material3" }
 compose-activity = { module = "androidx.activity:activity-compose", version.ref = "activityCompose" }
+androidx-compose-material3-windowSizeClass = { group = "androidx.compose.material3", name = "material3-window-size-class", version.ref = "material3WindowSize" }
 material-icons-extended = { module = "androidx.compose.material:material-icons-extended", version.ref = "materialIcons" }
 lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleRuntimeCompose" }
 androidx-runtime-livedata = { group = "androidx.compose.runtime", name = "runtime-livedata", version.ref = "runtimeLivedata" }
